cncProd/force-app/main/default/objects/ClashDeal__c/ClashDeal__c.object-meta.xml
<CustomObject>
    <description>Temporary Storage of Clash Deals Notification for End of Day Reporting</description>
    <label>Clash Opportunity</label>
    <nameField>
        <displayFormat>CLASH-{0000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Clash Opportunities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>