cncProd/force-app/main/default/objects/ClashDeal__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Clash Deals (Account)</relationshipLabel>
    <relationshipName>Clash_Deals1</relationshipName>
    <type>Lookup</type>
</CustomField>