cncProd/force-app/main/default/objects/ClashDeal__c/fields/BranchCode__c.field-meta.xml
<CustomField>
    <fullName>BranchCode__c</fullName>
    <description>Branch Code</description>
    <label>Branch Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>