cncProd/force-app/main/default/objects/ClashDeal__c/fields/ContactPerson__c.field-meta.xml
<CustomField>
    <fullName>ContactPerson__c</fullName>
    <formula>IF( 
ISNULL( Opportunity__r.Contact_Person__c ), 
&quot;&quot;, 
Opportunity__r.Contact_Person__r.FirstName &amp;&quot; &quot;&amp;Opportunity__r.Contact_Person__r.LastName
 )</formula>
    <label>Clash Opportunity: Contact Person Name</label>
    <type>Text</type>
</CustomField>