cncProd/force-app/main/default/objects/ClashDeal__c/fields/Lead_Name__c.field-meta.xml
<CustomField>
    <fullName>Lead_Name__c</fullName>
    <formula>IF(
ISNULL( Opportunity__r.Lead__c ), 
&quot;&quot;,
 Opportunity__r.Lead__r.FirstName &amp; &quot; &quot; &amp; Opportunity__r.Lead__r.LastName 
)</formula>
    <label>Clash Opportunity: Name of Lead</label>
    <type>Text</type>
</CustomField>