cncProd/force-app/main/default/objects/ClashDeal__c/fields/Models_Interested_In__c.field-meta.xml
<CustomField>
    <fullName>Models_Interested_In__c</fullName>
    <description>Opportunity-related Object: Models Interested In</description>
    <label>List of Models Interested In</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>