cncProd/force-app/main/default/objects/ClashDeal__c/fields/SalesConsultant__c.field-meta.xml
<CustomField>
    <fullName>SalesConsultant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Opportunity Owner Id</description>
    <label>Clash Opportunity: Sales Consultant</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Clash_Deals</relationshipName>
    <type>Lookup</type>
</CustomField>